--- a/server/public/assets/views/input.html
+++ b/server/public/assets/views/input.html
@@ -6,16 +6,37 @@
     <title></title>
 
 
-    <link rel="stylesheet" href="/vendors/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/vendors/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/styles/style.css">
 
-    <script type="text/javascript" src="/vendors/jquery.min.js"></script>
+    <script type="text/javascript" src="/assets/vendors/jquery.min.js"></script>
     <script type="text/javascript" src="/assets/scripts/app.js"></script>
 
 </head>
 <body>
 
-<p>Hellow</p>
+
+<h2>Employee Application</h2>
+<form>
+    <input type="text" id="numOfEmployees" name="numOfEmployees" placeholder="Number of Employees">
+
+    <input type="text" id="maleEmployee" name="maleEmployee" placeholder="Male Employees">
+    <input type="text" id="femaleEmployee" name="femaleEmployee" placeholder="Female Employees">
+
+    <input type="text" id="minsalaryRange" name="minsalaryRange" placeholder="Min Salary Range">
+    <input type="text" id="maxsalaryRange" name="maxsalaryRange" placeholder="Max Salary Range">
+
+    <input type="text" id="minYrsService" name="minYrsService" placeholder="Min Yrs Service">
+    <input type="text" id="maxYrsService" name="maxYrsService" placeholder="Max Yrs Service">
+
+    <button type="submit" class="generateEmployees btn btn-success">Create Employees</button>
+
+
+
+
+
+
+</form>
 
 
 </body>
