--- a/server/public/assets/views/input.html
+++ b/server/public/assets/views/input.html
@@ -17,11 +17,10 @@
 
 
 <h2>Employee Application</h2>
-<form>
+<form id="employeeForm">
     <input type="text" id="numOfEmployees" name="numOfEmployees" placeholder="Number of Employees">
 
-    <input type="text" id="maleEmployee" name="maleEmployee" placeholder="Male Employees">
-    <input type="text" id="femaleEmployee" name="femaleEmployee" placeholder="Female Employees">
+    <input type="text" id="employeeGenger" name="employeeGenger" placeholder="Male Female or Both">
 
     <input type="text" id="minsalaryRange" name="minsalaryRange" placeholder="Min Salary Range">
     <input type="text" id="maxsalaryRange" name="maxsalaryRange" placeholder="Max Salary Range">
@@ -29,7 +28,7 @@
     <input type="text" id="minYrsService" name="minYrsService" placeholder="Min Yrs Service">
     <input type="text" id="maxYrsService" name="maxYrsService" placeholder="Max Yrs Service">
 
-    <button type="submit" class="generateEmployees btn btn-success">Create Employees</button>
+    <button type="submit" id="generateEmployee" class="gen btn btn-success">Create Employees</button>
 
 
 
