--- a/server/public/assets/views/output.html
+++ b/server/public/assets/views/output.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/assets/styles/style.css">
 
     <script type="text/javascript" src="/assets/vendors/jquery.min.js"></script>
-    <script type="text/javascript" src="/assets/scripts/app.js"></script>
+    <script type="text/javascript" src="/assets/scripts/output.js"></script>
 </head>
 <body>
 
