--- a/server/public/assets/views/input.html
+++ b/server/public/assets/views/input.html
@@ -20,7 +20,7 @@
 <form id="employeeForm">
     <input type="text" id="numOfEmployees" name="numOfEmployees" placeholder="Number of Employees">
 
-    <input type="text" id="employeeGenger" name="employeeGenger" placeholder="Male Female or Both">
+    <input type="text" id="employeeGender" name="employeeGender" placeholder="Male Female or Both">
 
     <input type="text" id="minsalaryRange" name="minsalaryRange" placeholder="Min Salary Range">
     <input type="text" id="maxsalaryRange" name="maxsalaryRange" placeholder="Max Salary Range">
